--- a/client/src/app/components/top-bar/top-bar.component.html
+++ b/client/src/app/components/top-bar/top-bar.component.html
@@ -15,4 +15,5 @@
 <mat-menu #appMenu="matMenu">
   <button mat-menu-item [routerLink]="['/']"><mat-icon>home</mat-icon ></button>
   <button mat-menu-item [routerLink]="['/material-theme']">Material theme</button>
+  <button mat-menu-item [routerLink]="['/animation']">Animation</button>
 </mat-menu>
