host binding and host listener completed

--- a/client/src/app/components/top-bar/top-bar.component.html
+++ b/client/src/app/components/top-bar/top-bar.component.html
@@ -16,4 +16,5 @@
   <button mat-menu-item [routerLink]="['/']"><mat-icon>home</mat-icon ></button>
   <button mat-menu-item [routerLink]="['/material-theme']">Material theme</button>
   <button mat-menu-item [routerLink]="['/animation']">Animation</button>
+  <button mat-menu-item [routerLink]="['/host-binding-listener']">Host binding & listener</button>
 </mat-menu>
