--- a/client/src/app/modules/host-binding-listener/host-binding-listener.component.html
+++ b/client/src/app/modules/host-binding-listener/host-binding-listener.component.html
@@ -1,3 +1,8 @@
 <p class="mat-h3">Host Binding & Host Listener</p>
 
-<input appDnd matInput type="text" [value]="msg"/>
+<input appDnd matInput type="text" />
+
+<mat-divider></mat-divider> <br><br>
+
+<input appDnd matInput type="text" />
+
