updated file upload

--- a/client/src/app/components/top-bar/top-bar.component.html
+++ b/client/src/app/components/top-bar/top-bar.component.html
@@ -17,4 +17,5 @@
   <button mat-menu-item [routerLink]="['/material-theme']">Material theme</button>
   <button mat-menu-item [routerLink]="['/animation']">Animation</button>
   <button mat-menu-item [routerLink]="['/host-binding-listener']">Host binding & listener</button>
+  <button mat-menu-item [routerLink]="['/file-upload']">File upload</button>
 </mat-menu>
